modify style and add more info

--- a/AngularApp/projects/app-service-diagnostics/src/styles/bot.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles/bot.scss
@@ -16,6 +16,7 @@ textarea {
     padding-right: 30px;
     border-radius: 10px;
     margin-bottom: 10px;
+    clear: both;
 }
 
 .message-sent-by-system {
