--- a/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.scss
@@ -36,10 +36,11 @@
 }
 
 .article {
-    border: 1px solid #dddddd;
+    border: 1px solid #bbbbbb;
     cursor: pointer;
-    padding:10px;
-    margin-right: 10px;
+    padding: 10px;
+    background-color: white;
+    margin: 10px 0px;
 }
 
 .article > h5 {
