fixing the height of deep-search article div + updated web-search : not collapsed when deep-search is disabled

--- a/AngularApp/projects/diagnostic-data/src/lib/components/documents-search/documents-search.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/documents-search/documents-search.component.html
@@ -32,11 +32,12 @@
               [hidden]="(!isPublic || i < numDocumentsExpanded ) ? false : !viewRemainingDocuments" 
               (click)="selectResult(document)" tabindex="0" 
               (keyup.enter)="selectResult(document)" >
-          <a>{{document.title}}
+          <a>{{ limitTextCharacters(document.title, 100 )}}
             <i class="fa fa-external-link"></i>
           </a>
           <div class="article-link">{{getLinkText(document.url)}}  </div>
-          <div [innerHtml] = "document.description" >  </div>
+          
+          <div [innerHtml] = "limitTextCharacters(document.description,300)" >  </div>
         </div>
       </div>
 
