--- a/AngularApp/projects/diagnostic-data/src/lib/components/documents-search/documents-search.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/documents-search/documents-search.component.scss
@@ -45,10 +45,12 @@ a{
     padding: 10px;
     background-color: white;
     margin: 10px 0px;
+    height: 120px;        
 }
 
 .article > h5 {
     color: blue;
+    
 }
 
 .article-link {
